--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ description = "The basic library System Management web app built in Flask Back-e
 dependencies = [
     "flask",
     "flask-restx",         
-    "Flask-SQLAlchemy",         # TODO: Will use in the future 
+    "Flask-SQLAlchemy",        
     "python-dotenv",
 ]
