--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "Flask-Cors",
     "flask-restx",         
     "Flask-SQLAlchemy",  
-    "Flask-Login",      
+    "Flask-Login",
+    "Flask-Mail",      
     "python-dotenv",
     "requests",
     "pyotp",
